--- a/main-styles.css
+++ b/main-styles.css
@@ -1,9 +1,24 @@
 body {
     margin: 0;
     overflow: hidden;
-    text-align: center;
+    display: flex;
     background-color: salmon;
+    justify-content: center;
+    align-items: center;
 }
+
+ #verticalButtons {
+    display: flex;
+    flex-direction: column;
+ }
+
+ button {
+    border: none;
+    border-radius: 5px;
+    padding: 291% 7px;
+    margin: 3px;
+    cursor: pointer;
+ }
 
 #networkCanvas {
     background-color: black;
