--- a/main-styles.css
+++ b/main-styles.css
@@ -20,6 +20,10 @@ body {
     cursor: pointer;
  }
 
+button:hover {
+    background-color: yellowgreen;
+}
+
 #networkCanvas {
     background-color: black;
 }
